--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
   "homepage": "https://github.com/0legendary/virevo-network#readme",
   "description": "",
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.8",
     "concurrently": "^9.1.2"
+  },
+  "dependencies": {
+    "jsonwebtoken": "^9.0.2"
   }
 }
