--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,12 +1,11 @@
 {
     "compilerOptions": {
-        "target": "ES6",
-        "module": "commonjs",
-        "rootDir": "./src",
-        "outDir": "./dist",
-        "strict": true,
+        "module": "NodeNext",
+        "moduleResolution": "NodeNext",
         "esModuleInterop": true,
-        "skipLibCheck": true
+        "resolveJsonModule": true,
+        "strict": true,
+        "outDir": "dist"
     },
     "include": [
         "src/**/*"
