--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/vite": "^4.0.7",
+    "@types/lodash": "^4.17.15",
     "axios": "^1.7.9",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.475.0",
