--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,21 +12,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-separator": "^1.1.2",
     "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/vite": "^4.0.7",
     "@types/lodash": "^4.17.15",
     "@types/react-redux": "^7.1.34",
     "axios": "^1.7.9",
-    "framer-motion": "^12.4.7",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.18.2",
     "lucide-react": "^0.475.0",
+    "motion": "^12.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
+    "@types/node": "^22.13.5",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@types/zxcvbn": "^4.4.5",
