--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 # Node modules
 frontend/node_modules
 backend/node_modules
@@ -6,7 +7,7 @@ node_modules
 # Environment files
 frontend/.env
 backend/.env
-
+backend-bot/.env
 # Logs
 logs
 *.log
