--- a/backend-bot/.env
+++ b/backend-bot/.env
@@ -5,7 +5,8 @@ TELEGRAM_GROUP_CHAT_ID=your_group_chat_id
 TELEGRAM_CHAT_ID=1217780456
 GROQ_API_KEY='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'
 GROQ_API_KEY1='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'
-BACKEND_URL=http://localhost:4000
+# BACKEND_URL=http://localhost:4000
+BACKEND_URL=https://0827-103-70-197-68.ngrok-free.app
 MONGO_URI=mongodb+srv://alenmullassery123:TEPaxcbxSOJOlu3e@virevocluster.meazi.mongodb.net/virevo?retryWrites=true&w=majority&appName=VirevoCluster
 # MONGO_URI=mongodb+srv://bitsandbytesalen:NCtEUs0BR2s2xVB1@null/?retryWrites=true&w=majority&appName=VirevoCluster
 # MONGO_URI="mongodb://localhost:27017/virevo-db"
