feat: * add configurable daily and missed check-in times with weekend messages

--- a/backend-bot/.env
+++ b/backend-bot/.env
@@ -10,3 +10,5 @@ BACKEND_URL=https://0827-103-70-197-68.ngrok-free.app
 MONGO_URI=mongodb+srv://alenmullassery123:TEPaxcbxSOJOlu3e@virevocluster.meazi.mongodb.net/virevo?retryWrites=true&w=majority&appName=VirevoCluster
 # MONGO_URI=mongodb+srv://bitsandbytesalen:NCtEUs0BR2s2xVB1@null/?retryWrites=true&w=majority&appName=VirevoCluster
 # MONGO_URI="mongodb://localhost:27017/virevo-db"
+DAILY_CHECKIN_TIME="30 15 * * *"
+MISSED_CHECKIN_TIME="29 18 * * *"
